--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -122,4 +122,11 @@
             'logoandra'
             'andra';
           }
+
+          .container3{
+            display: grid;
+            grid-template-areas:
+            'skill'
+            'sertificate';
+          }
 }
