--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -11,7 +11,6 @@
       
       .ftprofile{
         margin: 10px;
-        
         grid-area: ftprofile;
         min-height: 300px;
         place-content: center;
@@ -42,10 +41,44 @@
       }
 
 }
-@media screen and (max-width: 680px) {
-  body{
-    max-width: 680px;
+@media screen and  (max-width: 768px) {
+  .menu-toggle{
+    display: flex;
   }
+
+  .menu-list ul{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    background-color: black;
+    top: 0;
+    height: 100vh;
+    width: 70%;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: -1;
+    transform: translateY(-100%);transition: all 1s;
+    opacity: 0;
+  }
+  .menu-list ul.slide{
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .menu-list{
+    grid-template-columns: 3fr 1fr;
+  }
+
+  .about{
+    display: grid;
+    grid-template-areas: 
+    'ftprofile biodata'
+    'ceritaku ceritaku';
+  }
+}
+
+@media screen and (max-width: 600px) {
+
   .menu-toggle{
     display: flex;
   }
