--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -183,6 +183,7 @@
   }
   .copyright p{
     font-size: 10px;
+    margin-left: 5px;
   }
   .kontak, .headline-footer{
     padding: 10px 30px 10px 30px;
